tests/bad/ReferenceExpected.ml
let x = 2;;

x := 3 (* Expected a reference *)
